[package]
name = "lms-records"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.7"
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
dotenvy = "0.15.7"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
ureq = { version = "2.9.1", features = ["json"] }

[profile.release]
overflow-checks = true
